<?xml version="1.0"?>
<package format="2">
  <name>model_pkg</name>
  <version>0.0.0</version>
  <description>Just a model for a package for demonstration purposes</description>

  <maintainer email="hassan@shehawy.xyz">hassan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend> 
  <exec_depend>actionlib_msgs</exec_depend> 
  <exec_depend>actionlib</exec_depend> 
 
  <export>
  </export>
</package>
